--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl.loader.js";
+      var loaderUrl = buildUrl + "/webgl2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webgl.data.br",
-        frameworkUrl: buildUrl + "/webgl.framework.js.br",
-        codeUrl: buildUrl + "/webgl.wasm.br",
+        dataUrl: buildUrl + "/webgl2.data.unityweb",
+        frameworkUrl: buildUrl + "/webgl2.framework.js.unityweb",
+        codeUrl: buildUrl + "/webgl2.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Ricarth Lima",
         productName: "Projeto Fiocruz - Jogo da Piranha",
