--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
   <title>Piranha Attack</title>
   <link rel="shortcut icon" href="TemplateData/favicon.ico">
   <link rel="stylesheet" href="TemplateData/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style=" background-color: black;">
   <div id="unity-container" class="unity-desktop">
     <canvas id="unity-canvas"></canvas>
     <div id="unity-loading-bar">
@@ -25,17 +30,19 @@
       <div id="unity-webgl-logo"></div>
       <div id="unity-fullscreen-button"></div>
       <div id="unity-build-title">
-        <form method="get" action="0.1.5.apk">
+        <form method="get" action="piranha_attack.apk">
           <button class="btn btn-info" type="submit">Download Android APK</button>
         </form>
       </div>
     </div>
   </div>
-  <div id="mobile-container" style="padding: 50px;">
+  <div id="mobile-container" style="padding: 25px; color: white;">
     <center>
-      <h1>Download Android Version</h1>
-      <form method="get" action="0.1.5.apk">
-        <button class="btn btn-info" type="submit">Download Android APK</button>
+      <h1 style="font-family: 'Hammersmith One', sans-serif; font-size: 6em; color: orange;">Piranha Attack</h1>
+      <img style="width: 100%; max-width: 1000px;" src="screeshot.jfif">
+      <br><br>WebGL builds are not supported on mobile devices. Please download and install mobile version.
+      <form method="get" action="piranha_attack.apk" style="margin-top: 15px;">
+        <button class="btn btn-success" type="submit">Download Android APK</button>
       </form>
     </center>
   </div>
